# ha-zoom-automation

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements_dev.txt  setup.cfg
.github/: release-drafter.yml
.github/workflows/: combined.yaml  pull_request_format.yaml  push_format.yml  release.yaml  tests.yml  validate.yaml
custom_components/zoom/: __init__.py  api.py  binary_sensor.py  common.py  config_flow.py  const.py  event.py  manifest.json  sensor.py  strings.json
custom_components/zoom-automation/: __init__.py  api.py  config_flow.py  const.py  manifest.json  strings.json
custom_components/zoom-automation/translations/: en.json
custom_components/zoom/translations/: en.json  pt-BR.json
custom_components/zoom_automation/: __init__.py  api.py  binary_sensor.py  common.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/zoom_automation/translations/: en.json
tests/: __init__.py  conftest.py  const.py  test_api.py  test_event.py  test_init.py  test_webhook.py
