[project]
name = "ha-zoom-automation"
version = "0.0.0"
description = "Home Assistant custom integration for Zoom presence detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Raman Gupta", email = "raman325@users.noreply.github.com"}
]
keywords = ["home-assistant", "zoom", "presence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/raman325/ha-zoom-automation"
Repository = "https://github.com/raman325/ha-zoom-automation"
Issues = "https://github.com/raman325/ha-zoom-automation/issues"

[project.optional-dependencies]
dev = [
    "aiohttp>=3.9.0",
    "homeassistant>=2024.1.0",
    "pytest>=7.0.0",
    "pytest-aiohttp>=1.0.0",
    "pytest-cov>=4.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "voluptuous>=0.13.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/zoom"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::pytest.PytestRemovedIn9Warning",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    ".venv",
    ".git",
    ".tox",
    "docs",
    "venv",
    "bin",
    "lib",
    "deps",
    "build",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
known-first-party = ["custom_components.zoom"]
